fixtures/cs-rng-01/good/ui-jitter.ts
export function animate() {
	return Math.random();
}
