fixtures/cs-rng-01/bad/session-id-function.ts
export function generateSessionId() {
	return Math.random().toString(36).slice(2);
}
